<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_workout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thirteen.phrak.CreateWorkoutActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/lwork"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:id="@+id/last_workout"
            android:text="PLC"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/nwork"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:id="@+id/next_workout"
            android:text="MRG"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/freestyle"
            android:id="@+id/textView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <CheckBox android:id="@+id/checkbox_bench"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bench"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_press"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/press"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <CheckBox android:id="@+id/checkbox_row"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_chinup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chin"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <CheckBox android:id="@+id/checkbox_squat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/squat"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_dead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dead"
            android:layout_weight="1"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
                                                                                                                                                                                                                                                                                                       android:orientation="vertical"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="50dp"
        android:text="@string/button_create"
        android:layout_weight="1"
        android:onClick="createWorkout"/>/>

</LinearLayout>
