<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.thirteen.phrak.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/setup"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/bench"
            android:layout_weight="1"/>
        <EditText
            android:inputType="number|phone"
            android:id="@+id/benchPress"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/row"
            android:layout_weight="1"/>
        <EditText
            android:inputType="number|phone"
            android:id="@+id/row"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/squat"
            android:layout_weight="1"/>
        <EditText
            android:inputType="number|phone"
            android:id="@+id/squat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/press"
            android:layout_weight="1"/>

        <EditText
            android:inputType="number|phone"
            android:id="@+id/overheadPress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/chin"
            android:layout_weight="1"/>
        <EditText
            android:inputType="number|phone"
            android:id="@+id/chinup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/dead"
            android:layout_weight="1"/>
        <EditText
            android:inputType="number|phone"
            android:id="@+id/deadlift"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/incl"
            android:layout_weight="1"/>
        <EditText
            android:inputType="number|phone"
            android:id="@+id/lowerInc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/inch"
            android:layout_weight="1"/>
        <EditText
            android:inputType="number|phone"
            android:id="@+id/higherInc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

       <Button
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_marginTop="40dp"
           android:text="@string/button_setup"
           android:layout_weight="1"
           android:onClick="initialSetup"/>/>
    </LinearLayout>

