<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exercise_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thirteen.phrak.ExerciseOne">
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:weightSum="8"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:weightSum="3"
            >

            <TextView
                android:id="@+id/amrapLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:keepScreenOn="true"
                android:text="@string/amrap"
                android:textColor="#33b5e5"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/amrap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:keepScreenOn="true"
                android:textColor="#33b5e5"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight="4"
            android:weightSum="4"
            >
            <TextView
                android:id="@+id/fullscreen_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/exercise"
                android:textColor="#33b5e5"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/weight"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="#33b5e5"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight="1"

            >
        <Button
            android:id="@+id/dummy_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/dummy_button"
            android:gravity="center"
            android:onClick="saveExercise"
        />
        </LinearLayout>

</LinearLayout>
</LinearLayout>
